--- a/roles/basic/tasks/config.yml
+++ b/roles/basic/tasks/config.yml
@@ -5,3 +5,15 @@
     replace: "PermitRootLogin no"
   notify:
     - restart-service-sshd
+
+# Idempotent way to build a /etc/hosts file with Ansible using your Ansible hosts inventory for a source.
+# Will include all hosts the playbook is run on.
+# Inspired from http://xmeblog.blogspot.com/2013/06/ansible-dynamicaly-update-etchosts.html
+- name: build /etc/hosts file
+  lineinfile:
+      dest: /etc/hosts
+      regexp: ^(([0-9]+)(\.|)){4}\W{{ item }}$
+      line: "{{ hostvars[item].ansible_default_ipv4.address }} {{ item }}"
+      state: present
+  when: hostvars[item].ansible_default_ipv4.address is defined
+  with_items: "{{ groups['data-platform'] }}"
