--- a/roles/basic/tasks/config.yml
+++ b/roles/basic/tasks/config.yml
@@ -15,7 +15,7 @@
       regexp: ^(([0-9]+)(\.|)){4}\W{{ item }}$
       line: "{{ hostvars[item].ansible_default_ipv4.address }} {{ item }}"
       state: present
-  when: hostvars[item].ansible_default_ipv4.address is defined
+  when: hostvars[item].ansible_default_ipv4 is defined and hostvars[item].ansible_default_ipv4.address is defined
   with_items: "{{ groups['data-platform'] }}"
 
 - name: set swappiness value via sysctl
