--- a/roles/firewall/tasks/main.yml
+++ b/roles/firewall/tasks/main.yml
@@ -23,6 +23,7 @@
   ufw:
     rule: allow
     src: "{{ hostvars[item].ansible_default_ipv4.address }}"
+  when: hostvars[item].ansible_default_ipv4 is defined and hostvars[item].ansible_default_ipv4.address is defined
   with_items: "{{ groups['data-platform'] }}"
 
 - name: copy a bash script to update ufw firewall rule with a home network dynamic IP
