--- a/roles/java/tasks/main.yml
+++ b/roles/java/tasks/main.yml
@@ -26,4 +26,5 @@
   with_items:
     - oracle-java8-installer
     - ca-certificates
+    - oracle-java8-unlimited-jce-policy
     - oracle-java8-set-default
