--- a/roles/hortonworks-data-platform/files/ambari.properties
+++ b/roles/hortonworks-data-platform/files/ambari.properties
@@ -139,6 +139,7 @@ server.python.log.level=INFO
 # additional config after ambari-server setup
 ambari-server.user=root
 check_database_skipped=false
+custom.postgres.jdbc.name=postgresql.jar
 gpl.license.accepted=true
 java.home=/usr/lib/jvm/java-8-oracle
 stack.java.home=/usr/lib/jvm/java-8-oracle
