--- a/roles/hortonworks-data-platform/defaults/main.yml
+++ b/roles/hortonworks-data-platform/defaults/main.yml
@@ -12,12 +12,12 @@ hortonworks_ambari_agent: false
 # Configuration
 hortonworks_ambari_server_hostname: "rogue-2.data-for.me"
 hortonworks_postgres_admin_username: "admin"
-hortonworks_postgres_admin_password: "SuperSecretPassword"
+hortonworks_postgres_admin_password: "Password_123"
 
 hortonworks_postgres_ambari_database: "ambari"
 hortonworks_postgres_ambari_schema: "ambari"
 hortonworks_postgres_ambari_username: "ambari"
-hortonworks_postgres_ambari_password: "SuperSecretPassword"
+hortonworks_postgres_ambari_password: "Password_123"
 
 hortonworks_postgres_databases:
   - { name: "hive" }
@@ -28,10 +28,10 @@ hortonworks_postgres_databases:
   - { name: "superset" }
 
 hortonworks_postgres_users:
-  - { db: "hive", name: "hive", password: "SuperSecretPassword", priv: "ALL" }
-  - { db: "ranger", name: "rangeradmin", password: "SuperSecretPassword", priv: "ALL" }
-  - { db: "ranger", name: "ranger", password: "SuperSecretPassword", priv: "CONNECT" }
-  - { db: "registry", name: "registry", password: "SuperSecretPassword", priv: "CONNECT" }
-  - { db: "streamline", name: "streamline", password: "SuperSecretPassword", priv: "CONNECT" }
-  - { db: "druid", name: "druid", password: "SuperSecretPassword", priv: "CONNECT" }
-  - { db: "superset", name: "superset", password: "SuperSecretPassword", priv: "CONNECT" }
+  - { db: "hive", name: "hive", password: "Password_123", priv: "ALL" }
+  - { db: "ranger", name: "rangeradmin", password: "Password_123", priv: "ALL" }
+  - { db: "ranger", name: "ranger", password: "Password_123", priv: "CONNECT" }
+  - { db: "registry", name: "registry", password: "Password_123", priv: "CONNECT" }
+  - { db: "streamline", name: "streamline", password: "Password_123", priv: "CONNECT" }
+  - { db: "druid", name: "druid", password: "Password_123", priv: "CONNECT" }
+  - { db: "superset", name: "superset", password: "Password_123", priv: "CONNECT" }
