--- a/roles/letsencrypt-certbot/defaults/main.yml
+++ b/roles/letsencrypt-certbot/defaults/main.yml
@@ -3,5 +3,5 @@
 letsencrypt_domain_names: '["input.data-platform.example","schema-registry.data-platform.example"]' # If you use freemyip.com for domain names, put them here
 letsencrypt_notifications_email: "username@gmail.com"
 letsencrypt_truststore_file_name: "truststore.p12"
-letsencrypt_truststore_passwd: "SuperSecretPassword"
+letsencrypt_truststore_passwd: "Password_123"
 letsencrypt_renew_log_path: "/var/log/letsencrypt_renew.log"
