--- a/roles/firewall/tasks/main.yml
+++ b/roles/firewall/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: install UFW Firewall
+  apt:
+    name: ufw
+    state: present
+
 - name: enable UFW Firewall and deny everything by default
   ufw:
     state: enabled
